--- a/duckling.cabal
+++ b/duckling.cabal
@@ -682,6 +682,8 @@ library
                      , Duckling.Temperature.PT.Rules
                      , Duckling.Temperature.RO.Corpus
                      , Duckling.Temperature.RO.Rules
+                     , Duckling.Temperature.RU.Corpus
+                     , Duckling.Temperature.RU.Rules
                      , Duckling.Temperature.TR.Corpus
                      , Duckling.Temperature.TR.Rules
                      , Duckling.Temperature.ZH.Corpus
@@ -1133,6 +1135,7 @@ test-suite duckling-test
                      , Duckling.Temperature.KO.Tests
                      , Duckling.Temperature.PT.Tests
                      , Duckling.Temperature.RO.Tests
+                     , Duckling.Temperature.RU.Tests
                      , Duckling.Temperature.TR.Tests
                      , Duckling.Temperature.ZH.Tests
                      , Duckling.Temperature.Tests
